--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.9.1"
+        "bootstrap-icons": "^1.9.1",
+        "lightbox2": "^2.11.3"
     }
 }
